--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "4.13.4",
     "express-handlebars": "3.0.0",
     "express-session": "1.13.0",
-    "passport": "0.3.2"
+    "passport": "0.3.2",
+    "passport-local": "1.0.0"
   }
 }
