changed config, fixed session settings

--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "bcrypt": "1.0.2",
     "body-parser": "1.15.1",
     "connect-redis": "3.0.2",
+    "cookie-parser": "^1.4.3",
+    "dotenv": "^6.0.0",
     "express": "4.13.4",
     "express-handlebars": "3.0.0",
     "express-session": "1.13.0",
